# european-city-inference

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  How to use it.md  README.md  basic_simulation.ipynb  figures.ipynb  figures_plots.ipynb  index.html  index.md  makefile  mkdocs.yml  myst.yml  new_test.ipynb  objects.inv  pyproject.toml  refs.bib  simulation_n_agent.ipynb  sitemap.xml  test.py  voting.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  documentation.yml  test.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
algorithms/: index.html
api/: index.html
code/: basic_simulation.ipynb  figures_plots.ipynb  simulation_n_agent.ipynb
docs/: algorithms.md  api.md  extending_response_functions.md  glossary.md  index.md
docs/tutorials/: tutorial_1_decision_making.ipynb  tutorial_2_voting_system.ipynb  tutorial_3_environment.ipynb  tutorial_3_polarization.ipynb  tutorial_4_precision.ipynb  tutorial_5_belief_to_vote.ipynb
extending_response_functions/: index.html
figures/: figure_1.ipynb  figures.ipynb
glossary/: index.html
multi_agent_simulation/: __init__.py  simulation.py
notebooks/: choice_tutorial.ipynb  figure_1.ipynb  figures.ipynb  main.ipynb  plurality.ipynb  polarization.ipynb  quadratic.ipynb  random.ipynb  test.ipynb  tutorial_1_decision_making.ipynb  tutorial_2_voting_system.ipynb  tutorial_3_environment.ipynb  tutorial_3_polarization.ipynb  tutorial_4_volatility.ipynb  tutorial_5_precision.ipynb
old_code/multi_agent_simulation/: simulation.py
overrides/: main.html
scripts/: benchmark.py  run_simulation.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/algorithms/: index.html
site/api/: index.html
site/glossary/: index.html
site/search/: search_index.json
site/tutorials/tutorial_1_decision_making/: index.html  tutorial_1_decision_making.ipynb
site/tutorials/tutorial_2_voting_system/: index.html
site/tutorials/tutorial_3_polarization/: index.html  tutorial_3_polarization.ipynb
src/: Env.py  __init__.py  agent.py  agents.py  analysis.py  config.py  core_logic.py  data_collector.py  distribution.py  environement.py  environment.py  main.ipynb  main.py  myst.yml  notebook.ipynb  notebook_voting_ooo.ipynb  plot.py  simulation.py  simulation_n_agent.ipynb  streamlit_app.py  test_agents.py  test_analysis.py  test_core.py  test_voting.py  utils.py  vega_data.json  voting.py  voting_systems.py
src/agent/: __init__.py  hgf_agent.py
src/agents/: __init__.py  agent.py  candidate.py  voter.py
src/analysis/: __init__.py  plotting.py
src/eci/: adapter.py  agents.py  analysis.py  core_logic.py  environment.py  metrics.py  observations.py  perceptual.py  plots.py  population.py  streamlit_app.py  utils.py  visualizer.py  voting_systems.py  world.py
src/eci/decision/: __init__.py  response.py  sampling.py  scoring.py  utilities.py
src/eci/plots/: __init__.py  _context.py  belief.py  preference.py  voting.py  winners.py
src/eci/voting/: __init__.py  plurality.py  quadratic.py  types.py  utils.py
src/eci/voting_system/: __init__.py  beliefs.py  decisions.py  plurality.py  quad.py  quadratic.py  random_voting.py
src/environment/: __init__.py  environment.py
src/mediator/: __init__.py  election_manager.py
src/strategies/decision/: __init__.py  base_decision.py  hgf_strategy.py  kl_divergence.py
src/utils/: metrics.py  voting_logic.py
src/voting_systems/: __init__.py  majority_voting.py  voting_system.py
stylesheets/: extra.css
test/: test_simulation.py
tests/: test_agents.py  test_eci_adapter.py  test_eci_agents.py  test_eci_data_imports.py  test_eci_decision_belief_gap.py  test_eci_decision_utilities.py  test_eci_environment.py  test_eci_fit_imports.py  test_eci_metrics.py  test_eci_plots.py  test_eci_response_protocol.py  test_eci_scoring.py  test_eci_utils.py  test_eci_visualizer.py  test_eci_voting_plurality.py  test_eci_voting_quadratic.py  test_eci_voting_system_belief.py  test_eci_voting_system_decision.py  test_eci_voting_system_plurality.py  test_eci_voting_system_quad.py  test_eci_voting_system_quadratic.py  test_eci_voting_system_random.py  test_env.py  test_utils.py
tutorials/tutorial_1_decision_making/: index.html
tutorials/tutorial_2_voting_system/: index.html
tutorials/tutorial_3_environment/: index.html
(+3 files in other folders)
