[project]
name = "eci"
version = "0.1.0"
description = "Agent-based simulation of voting systems."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sylvain Estebe", email = "sylvainestebe@cas.au.dk" },
    { name = "Nicolas Legrand", email = "nicolas.legrand@cas.au.dk" },
]
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyhgf>=0.2.7",
    "pytest>=8.4.2",
    "seaborn>=0.13.2",
    "pre-commit>=4.3.0",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "watermark",
    "ruff",
    "pytest-cov",
    "pingouin>=0.5.5",
    "importlib>=1.0.4",
    "marimo>=0.18.2",
    "pytest-mock>=3.15.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# E = pycodestyle (erreurs), F = pyflakes (erreurs logiques), W = pycodestyle (warnings)
# I = isort (tri des imports), D = pydocstyle (docstrings)
select = ["E", "F", "W", "I", "D"]
ignore = [
    "D100", # Ignore "Missing docstring in public module"
    "D104", # Ignore "Missing docstring in public package"
    "D107", # Ignore "Missing docstring in __init__"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=eci --cov-report=term --cov-report=html"
