[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project]
name = "eci"
version = "0.1.0"
description = "Agent-based simulation of voting systems."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sylvain Estebe", email = "sylvainestebe@cas.au.dk" },
    { name = "Nicolas Legrand", email = "nicolas.legrand@cas.au.dk" },
]

dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyhgf>=0.2.10",
    "seaborn>=0.13.2",
    "pingouin>=0.5.5",
    "importlib>=1.0.4",
    "tqdm>=4.67.3",
    "pymdown-extensions>=10.17.2",
    "mkdocs-material>=9.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov",
    "pytest-mock>=3.15.1",
    "ruff",
    "pre-commit>=4.3.0",
    "ipykernel>=6.29.5",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "marimo>=0.18.2",
    "watermark",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]

[tool.ruff]
extend-include = ["*.ipynb"]
# src-layout root, so first-party detection works without the package installed.
src = ["src"]

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, D = pydocstyle
select = ["E", "F", "W", "I", "D"]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
# Pin first-party so import grouping is identical locally and in CI
# (where `eci` is not installed and would otherwise be treated as third-party).
known-first-party = ["eci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=eci --cov-report=term --cov-report=html"

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocstrings[python]>=1.0.2",
    "pytest>=8.4.2",
]
